<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#120B0B"

    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Detail_Activity">

    <ImageView
        android:id="@+id/poster_Iv"
        android:layout_width="160dp"
        android:layout_height="240dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:textColor="@android:color/darker_gray"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plot"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:textColor="@android:color/darker_gray"
            android:layout_weight="6">

            <TextView
                android:id="@+id/plot_tv"
                android:layout_width="match_parent"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/vote"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/vote_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>